[package]
name = "node-token"
version = "0.1.0"
edition = "2024"
description = "KeyCompute node-token client for personal PC nodes"
license = "MIT"

[workspace]

# 库配置
[lib]
name = "node_token"
path = "src/lib.rs"

# 二进制配置
[[bin]]
name = "node-token"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full", "signal"] }

# 序列化和反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 工具库
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 配置管理
config = "0.13"

# 本地数据目录
dirs = "5"

# 重试策略
tokio-retry = "0.3"

# 文件权限（Unix）
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }

# 测试依赖
[dev-dependencies]
tempfile = "3"
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
futures = "0.3"
